# data-tool-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  README_EN.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/docker/: config.example.yaml  init-mysql.sql  migrate-rebuild.sql
backend/src/data_tool_mcp/: __init__.py  __main__.py  errors.py
backend/src/data_tool_mcp/admin/: __init__.py  _common.py  _constants.py  _query.py  _sources.py  _stats.py  _tools.py  router.py
backend/src/data_tool_mcp/cli/: main.py
backend/src/data_tool_mcp/config/: __init__.py  db_reader.py  hotreload.py  loader.py  models.py  store.py
backend/src/data_tool_mcp/embeddingmodels/: __init__.py  base.py  gemini.py
backend/src/data_tool_mcp/prebuiltconfigs/: __init__.py  alloydb-omni.yaml  alloydb-postgres-admin.yaml  alloydb-postgres-observability.yaml  alloydb-postgres.yaml  bigquery.yaml  clickhouse.yaml  cloud-healthcare.yaml  cloud-sql-mssql-admin.yaml  cloud-sql-mssql-observability.yaml  cloud-sql-mssql.yaml  cloud-sql-mysql-admin.yaml  cloud-sql-mysql-observability.yaml  cloud-sql-mysql.yaml  cloud-sql-postgres-admin.yaml  cloud-sql-postgres-observability.yaml  cloud-sql-postgres.yaml  cloud-storage.yaml  conversational-analytics-with-data-agent.yaml  dataplex.yaml  dataproc.yaml  elasticsearch.yaml  firestore.yaml  gaussdb.yaml  hbase.yaml  looker-conversational-analytics.yaml  looker-dev.yaml  looker.yaml  mindsdb.yaml  mssql.yaml  mysql.yaml  neo4j.yaml  oceanbase.yaml  oracledb.yaml  postgres.yaml  serverless-spark.yaml  singlestore.yaml  snowflake.yaml  spanner-postgres.yaml  spanner.yaml  (+2 more)
backend/src/data_tool_mcp/prompts/: __init__.py  base.py  registry.py
backend/src/data_tool_mcp/resources/: __init__.py  lru_cache.py  manager.py
backend/src/data_tool_mcp/server/: app.py  stats.py
backend/src/data_tool_mcp/server/mcp/: protocol.py  session.py  sse.py  stdio.py  streamable.py  versions.py
backend/src/data_tool_mcp/server/middleware/: __init__.py
backend/src/data_tool_mcp/server/routes/: api_routes.py  mcp_routes.py
backend/src/data_tool_mcp/sources/: __init__.py  alloydbadmin.py  alloydbpg.py  base.py  bigquery.py  bigtable.py  cassandra.py  clickhouse.py  cloudgda.py  cloudhealthcare.py  cloudloggingadmin.py  cloudmonitoring.py  cloudsqladmin.py  cloudsqlmssql.py  cloudsqlmysql.py  cloudsqlpg.py  cloudstorage.py  cockroachdb.py  couchbase.py  datalineage.py  dataplex_source.py  dataproc_source.py  dgraph.py  elasticsearch.py  firebird.py  firestore_source.py  gaussdb.py  hbase.py  http_source.py  looker_source.py  mindsdb.py  mongodb.py  mssql.py  mysql.py  neo4j_source.py  oceanbase.py  oracle.py  postgresql.py  redis.py  scylladb.py  (+10 more)
backend/src/data_tool_mcp/telemetry/: __init__.py
backend/src/data_tool_mcp/tools/: __init__.py  alloydb_ainl_tools.py  alloydb_tools.py  base.py  bigquery_tools.py  bigtable_tools.py  cassandra_tools.py  cloud_sql_variant_tools.py  cloudgda_tools.py  cloudhealthcare_tools.py  cloudlogging_tools.py  cloudmonitoring_tools.py  cloudsql_tools.py  cloudsqlpg_tools.py  cloudstorage_tools.py  couchbase_tools.py  dataform_tools.py  datalineage_tools.py  dataplex_tools.py  dataproc_tools.py  es_tools.py  firestore_tools.py  hbase_tools.py  http_tools.py  looker_tools.py  mongo_tools.py  mssql_tools.py  mysql_tools.py  neo4j_tools.py  other_sql_tools.py  pg_tools.py  redis_tools.py  serverless_spark_tools.py  spanner_tools.py  sql_tools.py  tdsql_tools.py  template.py  valkey_tools.py  wait_tools.py
backend/src/data_tool_mcp/utils/: __init__.py  crypto.py  errors.py
backend/tests/: conftest.py  test_integrity.py  test_mcp_protocol.py
backend/tests/test_admin/: test_router.py
backend/tests/test_config/: test_loader.py  test_registry.py
backend/tests/test_resources/: test_lru_cache.py
backend/tests/test_tools/: test_core_tools.py  test_mysql_tools.py  test_other_sql_tools.py  test_pg_tools.py
backend/tests/test_utils/: test_errors.py
frontend/: .dockerignore  .env  .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  rename_manifest.txt  restore_rename.sh  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ConfirmDialog.tsx  Layout.css  Layout.tsx  Toast.css  Toast.tsx
frontend/src/pages/: Dashboard.css  Dashboard.tsx  McpStats.css  McpStats.tsx  QueryConsole.css  QueryConsole.tsx  QuickConnect.css  QuickConnect.tsx  Sources.css  Sources.tsx  Tools.css  Tools.tsx
frontend/src/styles/: global.css
